--- a/Blog.Web/Areas/Admin/Views/Article/Add.cshtml
+++ b/Blog.Web/Areas/Admin/Views/Article/Add.cshtml
@@ -16,7 +16,14 @@
                     @*herhangi bir add işlemi yaptığımda direkt post metotla işlemleri vermek için*@
                     <div class="card-body">
                         <div class="form-group">
+
                             <label asp-for="CategoryId" for="defaultFormControlInput" class="form-label ">Kategori</label>
+                            <a class="btn text-primary float-end" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
+                                Ekle <i class="bx bx-plus "></i>
+                            </a>
+
+
+
                             <select id="categoryList" class="form-control mb-3" asp-for="CategoryId" asp-items="@(new SelectList(Model.Categories,"Id","Name"))"></select>  @*model. bizim modelimiz kategori onu ekleriz*@
                             <span asp-validation-for="CategoryId" class="text-danger"></span> @*validation işlemi yapılır.*@
                         </div>
@@ -46,3 +53,43 @@
         </div>
     </div>
 </div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Kategori Ekleme</h5>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+
+                    .<div class="form-group">
+                        <label class="d-block form-label">Kategori İsmi</label>
+                        <input class="form-control" type="text" id="categoryName" />
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
+                <button type="button" data-keyboard="false" class="btn btn-primary" id="btnSave">Kaydet</button>
+            </div>
+        </div>
+    </div>
+</div>
+@section Scripts
+    {
+
+    <script src="~/js/categoryAdd.js"></script>
+    <script>
+        var app = app || {};
+        app.Urls = app.Urls || {};
+
+        app.Urls.baseUrl = '@Url.Content("~")';
+        app.Urls.categoryAddUrl = "@(Url.Action("AddWithAjax", "Category"))";
+        app.Urls.articleAddUrl = "@(Url.Action("Add", "Article"))";
+    </script>
+
+}
